# ddd-backend

./: README.md  a.py  backup.db.sqlite3  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
chartflow/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
chartflow/management/commands/: createusers.py  loaddata.py
chartflow/migrations/: 0001_initial.py
datasets/: artists.csv  charts.csv  clusters.csv  countries.csv
ddd_backend/: asgi.py  settings.py  urls.py  wsgi.py
