[tool.poetry]
name = "ddd_backend"
version = "0.1.0"
description = ""
authors = ["Cédric Brunet <cedric.brunet@socotec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-rest-framework = "^0.1.0"
djangorestframework-simplejwt = "^5.5.0"
django = "^5.2"
django-cors-headers = "^4.7.0"
pandas = "^2.2.3"
django-filter = "^25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
